# gooddaynews

./: .env.example  README.md  README_KR48_WEATHER_PERSON_GUARD.md  README_VERCEL_WEBHOOK.md  debug-webhook.js  env.example  index.html  intent.js  main.py  morning-briefing.js  morning_briefing.py  naver_sources.py  news.js  news_sources.py  prompts.js  pyproject.toml  requirements (4).txt  requirements.txt  seo_utils.py  storage.js  telegram-webhook.js  telegram_notify.py  telegram_topic_listener.py  telegram_webhook.py  telegram_webhook_control.py  test-news.js  test-openai.js  trend_sources.py  vercel.json  wp_publisher.py
.github/workflows/: daily-adsense-seo.yml  telegram-topic-listener.yml
api/: setup-webhook.js  telegram_webhook.py  test-message.js  test-news.js
api/telegram_webhook/: index.py  telegram_webhook.py
data/: seed_keywords.csv
lib/: config.js  errors.js  news.js  storage.js
scripts/: telegram_webhook_control.py
templates/: article_prompt.md
vercel-webhook/: README.md  pyproject.toml  requirements.txt
vercel-webhook/api/: __init__.py  telegram_webhook.py
